--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	<groupId>app.trybe</groupId>
 	<artifactId>speciality-app</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>speciality-app</name>
 
 	<!-- NÃO MODIFIQUE A CONFIGURAÇÃO JÁ INSERIDA PARA O DESAFIO-->
@@ -62,7 +63,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-            <version>2.7.1</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.sun.jersey.contribs/jersey-spring -->
         <dependency>
@@ -74,7 +74,6 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>2.1.214</version>
             <scope>test</scope>
         </dependency>
 
@@ -85,7 +84,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M5</version>
 				<configuration>
 					<statelessTestsetReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5Xml30StatelessReporter">
 						<disable>false</disable>
